--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
 
 
-set(USE_TLS FALSE)
-set(USE_OPEN_SSL FALSE)
+set(USE_TLS TRUE)
+set(USE_OPEN_SSL TRUE)
 
 set(SPDLOG_USE_STD_FORMAT OFF)
 add_subdirectory(lib/libuv EXCLUDE_FROM_ALL)
